--- a/BoardWeb/src/main/webapp/index.html
+++ b/BoardWeb/src/main/webapp/index.html
@@ -7,5 +7,7 @@
 <body>
   <h3>Welcome My Home!!</h3>
   <h3>이창호입니다</h3>
+  <a href="html/sample.html">Sample 페이지로 이동.</a><br>
+  <a href="servlet/boardList.serv">게시판목록이동</a>
 </body>
 </html>
