--- a/BoardWeb/src/main/webapp/selectable.html
+++ b/BoardWeb/src/main/webapp/selectable.html
@@ -1,89 +1,107 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset='utf-8' />
-<script src='./dist/index.global.js'></script>
-<script>
+  <meta charset='utf-8' />
+  <script src='./dist/index.global.js'></script>
+  <script>
+    document.addEventListener('DOMContentLoaded', async function () {
+      var calendarEl = document.getElementById('calendar');
+      // ajax.
+      let data = await fetch('eventList.do');
+      let result = await data.json();
+      let eventAry = result; //결과를 events: eventAry 로 담아주기(61 line).
 
-  document.addEventListener('DOMContentLoaded',async function() {
-    var calendarEl = document.getElementById('calendar');
-  	// ajax.
-		let data = await fetch('eventList.do');
-		let result = await data.json();
-		let eventAry = result;//결과를 events: eventAry 로 담아주기(61 line).
+      var calendar = new FullCalendar.Calendar(calendarEl, {
+        headerToolbar: {
+          left: 'prev,next today',
+          center: 'title',
+          right: 'dayGridMonth,timeGridWeek,timeGridDay'
+        },
+        initialDate: '2025-06-12',
+        navLinks: true, // can click day/week names to navigate views
+        selectable: true,
+        selectMirror: true,
+        select: async function (arg) {
+          var title = prompt('Event Title:');
+          if (title) {
+            // 파라미터.
+            let startStr = arg.startStr.substring(0, 19);
+            let endStr = arg.endStr.substring(0, 19);
+            // ajax.
+            let response = await fetch('addEvent.do?title=' + title + '&start=' + startStr + '&end=' +
+              endStr);
+            let obj = await response.json();
+            if (obj.retCode == 'Success') {
+              calendar.addEvent({
+                title: title,
+                start: arg.start,
+                end: arg.end,
+                allDay: arg.allDay
+              })
+            } // end of if.
+          }
+          calendar.unselect()
+        },
+        eventClick: async function (arg) {
+          console.log(arg); // arg를 활용.
+          if (confirm('Are you sure you want to delete this event?')) {
+            // 파라미터.
+            let startStr = arg.event.startStr.substring(0, 19);
+            let endStr = arg.event.endStr.substring(0, 19);
+            // ajax.
+            let response = await fetch('removeEvent.do?title=' + arg.event.title + '&start=' + startStr +
+              '&end=' + endStr);
+            let obj = await response.json();
+            if (obj.retCode == 'Success') {
+              arg.event.remove();
+            }
+          }
+        },
+        editable: true,
+        dayMaxEvents: true, // allow "more" link when too many events
+        eventDrop: async function (info) {
+          alert(info.event.title + " was dropped on " + info.event.startStr);
+          if (!confirm("Are you sure about this change?")) {
+            info.revert();
+            return;
+          }
+          // 정상처리.
+          let s1 = info.oldEvent.startStr.substring(0, 19);
+          let s2 = info.event.startStr.substring(0, 19);
+          let e1 = info.oldEvent.endStr.substring(0, 19);
+          let e2 = info.event.endStr.substring(0, 19);
+          let t = info.event.title;
 
-    var calendar = new FullCalendar.Calendar(calendarEl, {
-      headerToolbar: {
-        left: 'prev,next today',
-        center: 'title',
-        right: 'dayGridMonth,timeGridWeek,timeGridDay'
-      },
-      initialDate: '2025-06-12',
-      navLinks: true, // can click day/week names to navigate views
-      selectable: true,
-      selectMirror: true,
-      select: async function(arg) {
-        var title = prompt('Event Title:');
-        if (title) {
-        	// 파라미터.
-        	let startStr = arg.startStr.substring(0, 19);
-        	let endStr = arg.endStr.substring(0, 19);
-    			// ajax.
-        	let response = await fetch('addEvent.do?title='+title+'&start='+startStr+'&end='+endStr);
-        	let obj = await response.json();
-        	if (obj.retCode == 'Success') {       		  
-            calendar.addEvent({
-              title: title,
-              start: arg.start,
-              end: arg.end,
-              allDay: arg.allDay
-            })
-        	} // end of if.
-        }
-        calendar.unselect()
-      },
-      eventClick: async function(arg) {
-    	  console.log(arg);// arg를 활용.
-        if (confirm('Are you sure you want to delete this event?')) {
-        	// 파라미터.
-        	let startStr = arg.event.startStr.substring(0, 19);
-        	let endStr = arg.event.endStr.substring(0, 19);
-					// ajax.
-        	let response = await fetch('removeEvent.do?title='+arg.event.title+'&start='+startStr+'&end='+endStr);
-        	let obj = await response.json();
-        	if (obj.retCode == 'Success') {       		  
-            arg.event.remove();
-        	}
-        }
-      },
-      editable: true,
-      dayMaxEvents: true, // allow "more" link when too many events
-      events: eventAry
+          let response = await fetch('modifyEvent.do?t=' + t + '&s1=' + s1 + '&s2=' + s2 + '&e1=' + e1 + '&e2=' + e2);
+          let result = await response.json();	
+          alert(result.retCode);
+        },
+        events: eventAry
+      });
+
+      calendar.render();
     });
+  </script>
+  <style>
+    body {
+      margin: 40px 10px;
+      padding: 0;
+      font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
+      font-size: 14px;
+    }
 
-    calendar.render();
-  });
-
-</script>
-<style>
-
-  body {
-    margin: 40px 10px;
-    padding: 0;
-    font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
-    font-size: 14px;
-  }
-
-  #calendar {
-    max-width: 1100px;
-    margin: 0 auto;
-  }
-
-</style>
+    #calendar {
+      max-width: 1100px;
+      margin: 0 auto;
+    }
+  </style>
 </head>
+
 <body>
 
   <div id='calendar'></div>
 
 </body>
+
 </html>
